--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,11 @@
 .ipynb_checkpoints
 .idea
 
-__pycache__
+src/__pycache__
+src/login.py
+stanford-ner-2016-10-31/
 
-pickledfeatures/
-pickled/
+src/pickledfeatures/
+src/pickled/
+src/features/
+json/logs/
